[package]
name = "proc-macro-rules"
version = "0.2.1"
authors = ["Nick Cameron <nrc@ncameron.org>"]
edition = "2018"
repository = "https://github.com/nrc/proc-macro-rules"
description = "Emulate macro-rules pattern matching in procedural macros"
readme = "README.md"
license = "Apache-2.0/MIT"

[dependencies]
proc-macro-rules-macros = "0.2.0"
proc-macro2 = "0.4.21"
proc-macro-hack = "0.5"
syn = { version = "0.15.0", features = ["full", "extra-traits"] }

[dev-dependencies]
quote = "0.6"

[workspace]
members = [
    "macros",
]

[[example]]
name = "macro_rules"
crate-type = ["proc-macro"]

[patch.crates-io]
proc-macro-rules-macros = { path = "macros" }
