[package]
name = "proc-macro-rules-macros"
version = "0.1.1"
authors = ["Nick Cameron <nrc@ncameron.org>"]
edition = "2018"
repository = "https://github.com/nrc/proc-macro-rules"
description = "Emulate macro-rules pattern matching in procedural macros"
readme = "README.md"
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.0"
syn = { version = "0.15.0", features = ["full", "extra-traits"] }
proc-macro2 = "0.4.21"
proc-macro-hack = "0.5"
